<resources>
    <string name="app_name">Plasma Sound</string>
    <string name="instrument_name">Keyboard</string>
    <string name="sequencer_name">Sequencer</string>
    <string name="camera_name">Motion</string>
    <string name="instrument_settings">Keyboard</string>
    <string name="effects_settings">Effects</string>
    <string name="save_settings">Save Preset</string>
    <string name="load_settings">Load Preset</string>
    <string name="save_sequence_settings">Save Sequence</string>
    <string name="load_sequence_settings">Load Sequence</string>
    <string name="record_settings">Record</string>
    <string name="camera_settings">Camera</string>
    <string name="waveform_editor">Waveform</string>
    <string name="sequencer">Sequencer</string>
    <string name="sequencer_settings">Sequencer</string>
    <string name="motion_settings">Motion</string>
    <string name="about_settings">About Plasma Sound</string>
    <string name="tutorial_settings">Tutorial</string>
    <string name="clear_sequence_settings">Clear</string>
    <string name="rating_dialog_title">Rate Plasma Sound!</string>
    <string name="rating_dialog_market">Market</string>
    <string name="rating_dialog_neveragain">Never show again!</string>
    <string name="rating_dialog_donate">Donate</string>
    <string name="rating_dialog_message">Plasma Sound is 100% ad free and cost free. Show your support by leaving a comment on the Market, or follow us &lt;a href=&quot;http://twitter.com/plasmasound&quot;&gt;on twitter&lt;/a&gt;.\n(This won\'t be shown again, I promise)</string>
    <string name="about_dialog_title">About Plasma Sound</string>
    <string name="about_dialog_message">&lt;a href=&quot;http://plasmasound.rjmarsan.com&quot;&gt;Plasma Sound&lt;/a&gt; (version %1$s build %2$s) is written by &lt;a href=&quot;http://rjmarsan.com&quot;&gt;RJ Marsan&lt;/a&gt;, and is completely ad free and cost free. Show your support by leaving a comment on the Market, follow us on &lt;a href=&quot;http://twitter.com/plasmasound&quot;&gt;twitter&lt;/a&gt;, or leave a donation below:</string>
    <string name="tutorial_dialog_title">How to use Plasma Sound</string>
    <string name="tutorial_dialog_ok">OK</string>
    <string name="tutorial_dialog_back">Back</string>
    <string name="tutorial_dialog_next">Next</string>
    <string name="tutorial_dialog_donebox">Done!</string>
    <string name="tutorial_dialog_message">Plasma Sound is the premiere free music instrument for Android.  Take a moment to check out how it works</string>
    <string name="tutorial_dialog_message1">Plasma Sound has two primary instruments, the Keyboard and the Sequencer.</string>
    <string name="tutorial_dialog_keyboardhoriz">The horizontal position of your finger across the keyboard controls pitch</string>
    <string name="tutorial_dialog_keyboardvert">The vertical position of your finger controls parameters of your choosing (volume, tremolo rate, etc.)</string>
    <string name="tutorial_dialog_keyboardmenu">Clicking on the keyboard icon takes you to the Keyboard Menu</string>
    <string name="tutorial_dialog_keyboardquantize">Using the Quantize Note options, you can switch from Continuous (theremin-like), Quantize (keyboard-like), and Slide (a hybrid)</string>
    <string name="tutorial_dialog_keyboardhighlow">Using the High Note and Low Note options, you can control the range of notes on the keyboard.</string>
    <string name="tutorial_dialog_effectsmenu">Clicking on the effects icon takes you to the Effects Menu</string>
    <string name="tutorial_dialog_effectsmenutext">Control many different effects, enable/disable them, and toggle what is controlled by the y-axis on this screen.</string>
    <string name="tutorial_dialog_effectspresets">Save and load presets using these buttons</string>
    <string name="tutorial_dialog_keyboard">When in the Sequencer, clicking on the Keyboard icon takes you to the keyboard</string>
    <string name="tutorial_dialog_sequencer">When in the Keyboard, clicking on the Sequencer icon takes you to the sequencer</string>
    <string name="tutorial_dialog_sequencerhelp">By dragging up and down on a spot on the sequencer, you can change the y-value associated with it.</string>
    <string name="tutorial_dialog_sequencerpresets">Save and load sequences using these buttons</string>
    <string name="tutorial_dialog_done">Thats it! Experiment around. You can always find this tutorial in the settings menu.</string>
    <string name="tutorial_dialog_keyboard_tablet">clicking on the Keyboard tab takes you to the keyboard</string>
    <string name="tutorial_dialog_sequencer_tablet">clicking on the Sequencer tab takes you to the sequencer</string>
    <string name="tutorial_dialog_slide0">Welcome to Plasma Sound</string>
    <string name="tutorial_dialog_slide1">How to Use: Keyboard</string>
    <string name="tutorial_dialog_slide2">How to Use: Keyboard</string>
    <string name="tutorial_dialog_slide3">How to Use: Keyboard</string>
    <string name="tutorial_dialog_slide4">How to Use: Keyboard</string>
    <string name="tutorial_dialog_slide5">How to Use: Effects</string>
    <string name="tutorial_dialog_slide6">How to Use: Effects - Saving</string>
    <string name="tutorial_dialog_slide7">How to Use: Sequencer</string>
    <string name="tutorial_dialog_slide8">How to Use: Sequencer - Saving</string>
    <string name="tutorial_dialog_slide9">Enjoy!</string>
    <string name="export_extra_title">Share Recording</string>
    <string name="export_extra_text">Check out the recording I made with Plasma Sound!</string>
    <string name="export_toast_record_finished">The recording is on your phone at: </string>
    <string name="export_toast_record_started">Select record again to finish recording</string>
    <string name="export_check_dialog_title">Share with Soundcloud?</string>
    <string name="export_check_dialog_text">Soundcloud is the easiest way to share recordings with Plasma Sound.  It\'s free, easy to use, and awesome.  If you\'d like, you can download it now, otherwise, we won\'t ask again.</string>
    <string name="export_check_dialog_soundcloud">Download Soundcloud</string>
    <string name="export_check_dialog_neveragain">Share Without It</string>
    <string name="preset_load_title">Pick a saved instance</string>
    <string name="preset_load_title_none">No saved instances</string>
    <string name="preset_save_title">Pick a saved instance</string>
    <string name="preset_save_new">New</string>
    <string name="preset_save_delete">Delete</string>
    <string name="preset_delete_title">Pick a preset to delete.  WARNING: IT\'S FINAL</string>
    <string name="preset_saveas_title">Name?</string>
    <string name="preset_saveas_message">Pick a name for the preset</string>
    <string name="preset_saveas_ok">Ok</string>
    <string name="preset_seq_load_title">Pick a Saved Sequences</string>
    <string name="preset_seq_load_title_none">No Saved Sequences</string>
    <string name="preset_seq_save_title">Pick a saved instance</string>
    <string name="preset_seq_save_new">New</string>
    <string name="preset_seq_save_delete">Delete</string>
    <string name="preset_seq_delete_title">Pick a Sequences to Delete.  WARNING: IT\'S FINAL</string>
    <string name="preset_seq_saveas_title">Name?</string>
    <string name="preset_seq_saveas_message">Pick a name for the preset_seq</string>
    <string name="preset_seq_saveas_ok">Ok</string>
    <string name="str_quantize_note">Quantize Note</string>
    <string name="str_scale">Scale</string>
    <string name="str_high_note_title">High Note</string>
    <string name="str_high_note_summary">High note of the scale</string>
    <string name="str_low_note_title">Low Note</string>
    <string name="str_low_note_summary">Low note of the scale</string>
    <string name="str_visuals_title">Visuals</string>
    <string name="str_plasma_quality">Plasma Quality</string>
    <string name="str_waveform">Waveform</string>
    <string name="str_volume_title">Volume</string>
    <string name="str_volume_summ">volume of each touch</string>
    <string name="str_waveform_title">Waveform</string>
    <string name="str_waveform_summ">kind of waveform generated</string>
    <string name="str_envelope">Envelope</string>
    <string name="str_attack_title">Attack</string>
    <string name="str_attack_summ">attack of the note (in milliseconds)</string>
    <string name="str_decay_title">Decay</string>
    <string name="str_decay_summ">release of the note on (in milliseconds)</string>
    <string name="str_delay">Delay</string>
    <string name="str_delaytime_title">Time</string>
    <string name="str_delaytime_summ">Time of Delay (in 100/seconds)</string>
    <string name="str_delayfeed_title">Feedback</string>
    <string name="str_delayfeed_summ">percent volume of the delay</string>
    <string name="str_reverb">Reverb</string>
    <string name="str_reverbtime_title">Time</string>
    <string name="str_reverbtime_summ">Time of Reverb (in milliseconds)</string>
    <string name="str_reverbfeed_title">Feedback</string>
    <string name="str_reverbfeed_summ">percent volume of the reverb</string>
    <string name="str_filter">Filter</string>
    <string name="str_filter_title">Cutoff</string>
    <string name="str_filter_summ">cutoff of the low-pass filter</string>
    <string name="str_vibrato">Tremolo</string>
    <string name="str_vibratospeed_title">Speed</string>
    <string name="str_vibratospeed_summ">speed of the tremolo</string>
    <string name="str_vibratodepth_title">Depth</string>
    <string name="str_vibratodepth_summ">depth of the tremolo (in percent)</string>
    <string name="str_vibratowaveform_title">Waveform</string>
    <string name="str_vibratowaveform_summ">waveform the tremolo follows</string>
    <string name="str_tremolo">Vibrato</string>
    <string name="str_tremolospeed_title">Speed</string>
    <string name="str_tremolospeed_summ">speed of the vibrato</string>
    <string name="str_tremolodepth_title">Depth</string>
    <string name="str_tremolodepth_summ">depth of the vibrato (in percent)</string>
    <string name="str_tremolowaveform_title">Waveform</string>
    <string name="str_tremolowaveform_summ">waveform the vibrato follows</string>
    <string name="str_seq_scale">Scale of Sequencer</string>
    <string name="str_seq_scale_summ">Major, Minor, Pentatonic, etc.</string>
    <string name="str_seq_params">Sequencer Parameters</string>
    <string name="str_seq_tempo">Tempo</string>
    <string name="str_seq_tempo_summ">in Beats per Minute</string>
    <string name="str_seq_sync">Syncopation</string>
    <string name="str_seq_sync_summ">from 1 to 100</string>
    <string name="str_seq_low">Low Note</string>
    <string name="str_seq_low_summ">Low note of the sequencer</string>
    <string name="str_seq_steps">Steps</string>
    <string name="str_seq_steps_summ">steps in the sequencer</string>
    <string name="str_seq_steps_text">steps</string>
    <string name="str_seq_notes">Notes</string>
    <string name="str_seq_notes_summ">notes in each step</string>
    <string name="str_seq_notes_text">notes</string>
    <string name="str_motion_params">Motion Parameters</string>
    <string name="str_motion_threshold">Threshold</string>
    <string name="str_motion_threshold_summ">Level to make a spot "active"</string>
    <string name="str_motion_sensitivity">Sensitivity</string>
    <string name="str_motion_sensitivity_summ">How quicky grid fills up</string>
    <string name="str_motion_settingup">Setting up the camera&#8230;</string>
    <string name="str_motion_deadcamera">:(\nThe camera! We\'ve lost it! \nSometimes this happens, but a quick restart should fix it.\nSorry!</string>
    <string name="str_motion_howto">Directions: \n    1. Find somewhere bright\n    2. Place device somewhere stable\n    3. Face front camera towards you\n    4. Move in front of the device\n    5. Enjoy.</string>
</resources>